--- a/resources/com/googlecode/cssxfire/www/style.css
+++ b/resources/com/googlecode/cssxfire/www/style.css
@@ -29,6 +29,9 @@ a:hover {
     color: #51A2FF;
     text-decoration: underline;
 }
+img {
+    border: none;
+}
 .screenshot {
     display: block;
     margin-top: 10px;
